ingress-controller/cloudtrader-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloudtrader-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - cloudtrader.ukwest.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: cloudtrader.ukwest.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: cloudtrader-api
              servicePort: 80
            path: /api/(.*)
          - backend:
              serviceName: cloudtrader-ui
              servicePort: 80
            path: /(.*)
